--- a/src/app.css
+++ b/src/app.css
@@ -1,9 +1,41 @@
 .show {
-    opacity: 1;
-    transition: all 0.5s ease-in;
+    animation: show-item 2s forwards;
 }
 
 .hide{
-    opacity: 0;
-    transition: all 0.5s ease-in;
+    animation: hide-item 2s forwards;
+}
+
+@keyframes hide-item {
+    0% {
+        opacity: 1;
+        color: red;
+    }
+
+    50% {
+        opacity: 0.5;
+        color: green;;
+    }
+
+    100% {
+        opacity: 0;
+        color: blue;
+    }
+}
+
+@keyframes show-item {
+    100% {
+        opacity: 1;
+        color: red;
+    }
+
+    50% {
+        opacity: 0.5;
+        color: green;;
+    }
+
+    0% {
+        opacity: 0;
+        color: blue;
+    }
 }
